Fixed Table scroll for responsive
Fixed the table horizontal scrollbar

--- a/style.css
+++ b/style.css
@@ -3,71 +3,81 @@
  ****************/
 
 #intro-page {
-    text-align: center;
+  text-align: center;
 }
 
 /****************
  ***SeasonMode***
  ****************/
 
- button:hover {
-    color: #FFF;
-    background-color: #33C3F0;
-    border-color: #33C3F0;
- }
+button:hover {
+  color: #fff;
+  background-color: #33c3f0;
+  border-color: #33c3f0;
+}
+
+/****************
+ *****Table******
+ ****************/
+
+table {
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
+}
 
 /***************
  ***Slider***
  ***************/
 
 .slider {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 100%;
-    height: 25px;
-    background: #D3D3D3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 25px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 
 .slider:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    background: #FF0000;
-    cursor: pointer;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #ff0000;
+  cursor: pointer;
 }
 
 .slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    background: #FF0000;
-    cursor: pointer;
+  width: 25px;
+  height: 25px;
+  background: #ff0000;
+  cursor: pointer;
 }
 
 #sliderticks {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 10px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
 }
 
 #sliderticks p {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    width: 1px;
-    background: #D3D3D3;
-    height: 10px;
-    line-height: 40px;
-    margin: 0 0 20px 0;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  width: 1px;
+  background: #d3d3d3;
+  height: 10px;
+  line-height: 40px;
+  margin: 0 0 20px 0;
 }
 
 /***************
@@ -75,8 +85,8 @@
  ***************/
 
 th {
-    text-align: center;
+  text-align: center;
 }
 td {
-    text-align: center;
+  text-align: center;
 }
